--- a/backend/package.json
+++ b/backend/package.json
@@ -1,14 +1,18 @@
 {
-    "name": "backend",
-    "version": "1.0.0",
-    "main": "server.js",
-    "scripts": {
-        "start": "node server.js"
-    },
-    "dependencies": {
-        "body-parser": "^1.19.0",
-        "cors": "^2.8.5",
-        "express": "^4.21.1",
-        "pg": "^8.7.1"
-    }
+  "name": "backend",
+  "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "start": "node functions/api.js",
+    "build": "netlify deploy --prod"
+  },
+  "dependencies": {
+    "@netlify/functions": "^2.8.2",
+    "@types/express": "^5.0.0",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.21.1",
+    "pg": "^8.7.1",
+    "serverless-http": "^3.2.0"
+  }
 }
